--- a/.github/workflows/AzureFunctions.Http.yml
+++ b/.github/workflows/AzureFunctions.Http.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   FUNCTION_APP_NAME: myfirstfunctionapp-fa-ab
-  FUNCTION_APP_PACKAGE_PATH: '/src/AzureFunctions.blob'
+  FUNCTION_APP_PACKAGE_PATH: '/src/AzureFunctions.Http'
   RESOURCE_GROUP_NAME: myfirstfunction-rg
   DOTNET_VERSION: '3.1.404'
 
