--- a/.github/workflows/AzureFunctions.blob.yml
+++ b/.github/workflows/AzureFunctions.blob.yml
@@ -3,9 +3,13 @@ on:
   push:
     branches:
       - main
+    paths:
+    - 'src/AzureFunctions.blob/**'
   pull_request:
     branches:
       - main
+    paths:
+    - 'src/AzureFunctions.blob/**'
   workflow_dispatch:
   
 
