--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -3,9 +3,13 @@ on:
   push:
     branches:
       - main
+    paths:
+    - 'src/MyFirstAzureFunction/**'
   pull_request:
     branches:
       - main
+    paths:
+    - 'src/MyFirstAzureFunction/**'
   workflow_dispatch:
   
 
