--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -16,7 +16,7 @@ on:
 env:
   FUNCTION_APP_NAME: myfirstfunctionapp-fa-ab
   FUNCTION_APP_PACKAGE_PATH: '/src/MyFirstAzureFunction'
-  RESOURCE_GROUP_NAME: myfirstfunction-rg
+  RESOURCE_GROUP_NAME: ab-af-rg
   DOTNET_VERSION: '3.1.404'
 
 jobs:
